<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

     <TextView
        android:id="@+id/textViewInputNumbers"
        style="@style/FontTheme30InputNumbers"
        android:layout_height="wrap_content"
        android:text="@string/textViewInputNumbers" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/r0"
        android:layout_below="@id/textViewInputNumbers"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/column0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/row0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/textViewButtonC"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButtonC" />

                <Button
                    android:id="@+id/textViewButtonPlusMinus"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButtonPlusMinus" />

                <Button
                    android:id="@+id/textViewButtonPercent"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButtonPercent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/textViewButton7"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton7" />

                <Button
                    android:id="@+id/textViewButton8"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton8" />

                <Button
                    android:id="@+id/textViewButton9"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/textViewButton4"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton4" />

                <Button
                    android:id="@+id/textViewButton5"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton5" />

                <Button
                    android:id="@+id/textViewButton6"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton6" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/textViewButton1"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton1" />

                <Button
                    android:id="@+id/textViewButton2"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton2" />

                <Button
                    android:id="@+id/textViewButton3"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:text="@string/textViewButton3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/textViewButton0"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"
                    android:text="@string/textViewButton0" />

                <Button
                    android:id="@+id/textViewButtonDot"
                    style="@style/FontThemeGray"
                    android:background="@android:color/transparent"
                    android:layout_weight="2"
                    android:text="@string/textViewButtonDot" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/column1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <Button
                style="@style/FontTheme30_Blue"
                android:id="@+id/textViewButtonDivision"
                android:layout_weight="1"
                android:text="@string/textViewButtonDivision" />
            <Button
                style="@style/FontTheme30_Blue"
                android:id="@+id/textViewButtonMulti"
                android:layout_weight="1"
                android:text="@string/textViewButtonMulti" />
            <Button
                style="@style/FontTheme30_Blue"
                android:id="@+id/textViewButtonMinus"
                android:text="@string/textViewButtonMinus" />
            <Button
                style="@style/FontTheme30_Blue"
                android:id="@+id/textViewButtonPlus"
                android:layout_weight="1"
                android:text="@string/textViewButtonPlus" />
            <Button
                style="@style/FontTheme30_Blue"
                android:id="@+id/btnSet"
                android:layout_weight="1"
                android:text="@string/textViewButtonBtnSet" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>